force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/AP_and_LIKO_Order_Tracking__c.object-meta.xml
<CustomObject>
    <description>One to One relationship with Opportunity. Architectural Products (AP) was removed after the sale of AP.</description>
    <label>Q&amp;O Tracking</label>
    <nameField>
        <displayFormat>Q&amp;O-{0000}</displayFormat>
        <label>Q&amp;O Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Q&amp;O Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>