force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Add_Drafting__c.field-meta.xml
<CustomField>
    <fullName>Add_Drafting__c</fullName>
    <label>Add: Drafting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>