force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Addendum_Req__c.field-meta.xml
<CustomField>
    <fullName>Addendum_Req__c</fullName>
    <label>Addendum Req</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>