force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Addl_Notes_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Addl_Notes_Instructions__c</fullName>
    <label>Add&apos;l Notes / Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>