force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/AP_Product_OTP__c.field-meta.xml
<CustomField>
    <fullName>AP_Product_OTP__c</fullName>
    <label>AP Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AP Accessories</fullName>
            </value>
            <value>
                <fullName>Basis</fullName>
            </value>
            <value>
                <fullName>Bed Locator</fullName>
            </value>
            <value>
                <fullName>Contour</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Elements</fullName>
            </value>
            <value>
                <fullName>First Impression</fullName>
            </value>
            <value>
                <fullName>Flatwall</fullName>
            </value>
            <value>
                <fullName>Gallery Wall</fullName>
            </value>
            <value>
                <fullName>Horizon</fullName>
            </value>
            <value>
                <fullName>HSI Units</fullName>
            </value>
            <value>
                <fullName>Imagemaker</fullName>
            </value>
            <value>
                <fullName>Integris Rail - 2002</fullName>
            </value>
            <value>
                <fullName>Integris Rail - 2003</fullName>
            </value>
            <value>
                <fullName>Latitude</fullName>
            </value>
            <value>
                <fullName>Lighting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Patient Care Module</fullName>
            </value>
            <value>
                <fullName>Power Column</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>