force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Approvals_Rcvd_Liko__c.field-meta.xml
<CustomField>
    <fullName>Approvals_Rcvd_Liko__c</fullName>
    <label>3 Approvals Rcvd Dt</label>
    <type>Date</type>
</CustomField>