force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Approvals_Sent_to_PM__c.field-meta.xml
<CustomField>
    <fullName>Approvals_Sent_to_PM__c</fullName>
    <label>3 Approvals Sent to PM Dt</label>
    <type>Date</type>
</CustomField>