force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Arch_71_Ceiling_Bracket_Threaded_Rod_Kit__c.field-meta.xml
<CustomField>
    <fullName>Arch_71_Ceiling_Bracket_Threaded_Rod_Kit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arch 71 Ceiling Bracket/Threaded Rod Kit</label>
    <type>Checkbox</type>
</CustomField>