force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Attachment__c.field-meta.xml
<CustomField>
    <fullName>Attachment__c</fullName>
    <inlineHelpText>Selecting the attachment required for this design.</inlineHelpText>
    <label>Installation Method (default = Ceiling)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ceiling Mount</fullName>
            </value>
            <value>
                <fullName>Wall Mount</fullName>
            </value>
            <value>
                <fullName>Ceiling/Wall Mount Combo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>