force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Bariatric_Ready__c.field-meta.xml
<CustomField>
    <fullName>Bariatric_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to request the rail system be designed for a bariatric upgrade.</description>
    <inlineHelpText>Check to request the rail system be designed for a bariatric upgrade.</inlineHelpText>
    <label>Bariatric-Ready?</label>
    <type>Checkbox</type>
</CustomField>