force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Bed__c.field-meta.xml
<CustomField>
    <fullName>Bed__c</fullName>
    <label>Bed</label>
    <length>10</length>
    <type>Text</type>
</CustomField>