force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Budgetary_Only__c.field-meta.xml
<CustomField>
    <fullName>Budgetary_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that only a budgetary proposal is required.</description>
    <inlineHelpText>Indicates that only a budgetary proposal is required (no parts list, no drawings).</inlineHelpText>
    <label>Budgetary Only</label>
    <type>Checkbox</type>
</CustomField>