force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Ceiling_Height__c.field-meta.xml
<CustomField>
    <fullName>Ceiling_Height__c</fullName>
    <description>Enter ceiling height.</description>
    <inlineHelpText>Enter ceiling height.</inlineHelpText>
    <label>Ceiling Height</label>
    <length>255</length>
    <type>Text</type>
</CustomField>