force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Ceiling_Notes__c.field-meta.xml
<CustomField>
    <fullName>Ceiling_Notes__c</fullName>
    <label>Ceiling Notes</label>
    <type>TextArea</type>
</CustomField>