force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Ceiling_Structure__c.field-meta.xml
<CustomField>
    <fullName>Ceiling_Structure__c</fullName>
    <label>Ceiling Structure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Concrete Flat Slab</fullName>
            </value>
            <value>
                <fullName>Concrete w/ Metal Deck</fullName>
            </value>
            <value>
                <fullName>Concrete Beams</fullName>
            </value>
            <value>
                <fullName>Open Web Joists</fullName>
            </value>
            <value>
                <fullName>Steel Beams</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Unknown At This Time</fullName>
            </value>
            <value>
                <fullName>Other (describe in notes)</fullName>
            </value>
            <value>
                <fullName>Structural Steel Build - Done by Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>