force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Ceiling_Type__c.field-meta.xml
<CustomField>
    <fullName>Ceiling_Type__c</fullName>
    <inlineHelpText>Select ceiling type.</inlineHelpText>
    <label>Ceiling Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acoustic Tile</fullName>
            </value>
            <value>
                <fullName>Hard Lid / Gyp Board</fullName>
            </value>
            <value>
                <fullName>Open (No Ceiling)</fullName>
            </value>
            <value>
                <fullName>Other (explain in notes)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>