force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Charging_System__c.field-meta.xml
<CustomField>
    <fullName>Charging_System__c</fullName>
    <label>Charging System (default = Wall)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wall Charging</fullName>
            </value>
            <value>
                <fullName>In-Rail Charging</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>On-Rail - (Likorall Only)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>