force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Clinical_Consulting__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Consulting__c</fullName>
    <label>Clinical Consulting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>