force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Completed_Quote__c.field-meta.xml
<CustomField>
    <fullName>Completed_Quote__c</fullName>
    <label>5 Completed</label>
    <type>Date</type>
</CustomField>