force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Configuration_Notes__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Notes__c</fullName>
    <description>Note to allow reps to inform PM&apos;s of additional direction on configurations required.</description>
    <inlineHelpText>Enter all relevant information to drive accurate configuration:  room #&apos;s, system quantities, etc.</inlineHelpText>
    <label>Qty/Configuration Notes</label>
    <type>TextArea</type>
</CustomField>