force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Consulting_Chart__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Chart__c</fullName>
    <formula>HYPERLINK(&quot;https://hill-rom--c.na139.content.force.com/servlet/servlet.FileDownload?file=00P4W000010Ljcc&quot;,&quot;Click Here&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consulting Chart</label>
    <type>Text</type>
</CustomField>