force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Contract_Under_Review__c.field-meta.xml
<CustomField>
    <fullName>Contract_Under_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Under Review</label>
    <type>Checkbox</type>
</CustomField>