force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Contract_Under_Review_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Under_Review_Completed_Date__c</fullName>
    <label>Contract Under Review Completed Date</label>
    <type>Date</type>
</CustomField>