force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Corelife__c.field-meta.xml
<CustomField>
    <fullName>Corelife__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corelife</label>
    <type>Checkbox</type>
</CustomField>