force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/CR_CO__c.field-meta.xml
<CustomField>
    <fullName>CR_CO__c</fullName>
    <label>CR/CO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>