force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/CRM_Received__c.field-meta.xml
<CustomField>
    <fullName>CRM_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1. CRM Received</label>
    <type>Checkbox</type>
</CustomField>