force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/CRM_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>CRM_Received_Date__c</fullName>
    <label>1 CRM Rcvd Dt</label>
    <type>Date</type>
</CustomField>