force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/CRM_Received_User__c.field-meta.xml
<CustomField>
    <fullName>CRM_Received_User__c</fullName>
    <label>1. CRM Received User</label>
    <length>80</length>
    <type>Text</type>
</CustomField>