force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Cut_Thru_Door_Header__c.field-meta.xml
<CustomField>
    <fullName>Cut_Thru_Door_Header__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cut Thru Door Header?</label>
    <type>Checkbox</type>
</CustomField>