force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Date_Required__c.field-meta.xml
<CustomField>
    <fullName>Date_Required__c</fullName>
    <label>Date Required</label>
    <type>Date</type>
</CustomField>