force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Dealer_Address__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Address__c</fullName>
    <label>Dealer Address</label>
    <length>20</length>
    <type>Text</type>
</CustomField>