force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Dealer_City__c.field-meta.xml
<CustomField>
    <fullName>Dealer_City__c</fullName>
    <label>Dealer City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>