force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Name__c</fullName>
    <label>Dealer Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>