force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Dealer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Notes__c</fullName>
    <label>Dealer Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>