force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Dealer_Zip__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Zip__c</fullName>
    <label>Dealer Zip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>