force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Decking_Types__c.field-meta.xml
<CustomField>
    <fullName>Decking_Types__c</fullName>
    <formula>HYPERLINK(&quot;https://hill-rom--hrctest.my.salesforce.com/sfc/p/#E0000000KMt9/a/E00000004g5C/0wipilShpw8wcYk2DXEI3mb3m7RHM6Fzmj80yURpaZQ&quot;,&quot;Click to view Image&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Decking Types</label>
    <type>Text</type>
</CustomField>