force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Delivery_Comment__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Comment__c</fullName>
    <label>Delivery Comment</label>
    <type>TextArea</type>
</CustomField>