force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Discount_Note__c.field-meta.xml
<CustomField>
    <fullName>Discount_Note__c</fullName>
    <label>Discount Note</label>
    <type>TextArea</type>
</CustomField>