force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <label>Distance</label>
    <length>50</length>
    <type>Text</type>
</CustomField>