force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/DME_Contact__c.field-meta.xml
<CustomField>
    <fullName>DME_Contact__c</fullName>
    <formula>Opportunity__r.Order_Contact__r.FirstName +&quot; &quot;+ Opportunity__r.Order_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DME Contact</label>
    <type>Text</type>
</CustomField>