force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Drawings_Provided__c.field-meta.xml
<CustomField>
    <fullName>Drawings_Provided__c</fullName>
    <inlineHelpText>Enter the types of drawings available showing the facility and/or system design.</inlineHelpText>
    <label>Drawings Provided</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DWG&apos;s</fullName>
            </value>
            <value>
                <fullName>PDF&apos;s</fullName>
            </value>
            <value>
                <fullName>Sketch&apos;s</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>