force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Drawings_Required__c.field-meta.xml
<CustomField>
    <fullName>Drawings_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drawings Required</label>
    <type>Checkbox</type>
</CustomField>