force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Engineering__c.field-meta.xml
<CustomField>
    <fullName>Engineering__c</fullName>
    <label>Engineering:</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>