force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Equipment_Training__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Training__c</fullName>
    <label>Equipment Training</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>