force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Estimated_Elevation_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Elevation_Quantity__c</fullName>
    <label>Estimated Elevation Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>