force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Final_Quote_Amount_w_o_Install__c.field-meta.xml
<CustomField>
    <fullName>Final_Quote_Amount_w_o_Install__c</fullName>
    <label>Equipment Amount (w/o Install)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>