force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Floor_to_Floor_Height__c.field-meta.xml
<CustomField>
    <fullName>Floor_to_Floor_Height__c</fullName>
    <inlineHelpText>*Measured Distance from the Finished Ceiling to the Building Structure</inlineHelpText>
    <label>Interstitial Height</label>
    <length>250</length>
    <type>Text</type>
</CustomField>