force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Formal_RFP__c.field-meta.xml
<CustomField>
    <fullName>Formal_RFP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box if this quote is associated with a formal RFP.</description>
    <inlineHelpText>Check box if this quote is associated with a formal RFP.</inlineHelpText>
    <label>Formal RFP</label>
    <type>Checkbox</type>
</CustomField>