force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Formal_RFP_Desc__c.field-meta.xml
<CustomField>
    <fullName>Formal_RFP_Desc__c</fullName>
    <inlineHelpText>Briefly describe what is needed for the RFP response.</inlineHelpText>
    <label>Formal RFP Desc</label>
    <type>TextArea</type>
</CustomField>