force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/GPO__c.field-meta.xml
<CustomField>
    <fullName>GPO__c</fullName>
    <formula>Opportunity__r.Account.Primary_Capital_GPO_Desc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GPO</label>
    <type>Text</type>
</CustomField>