force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/GUI_Handcontrol_LikoGuard_Only__c.field-meta.xml
<CustomField>
    <fullName>GUI_Handcontrol_LikoGuard_Only__c</fullName>
    <description>LikoGuard Only</description>
    <inlineHelpText>LikoGuard Only</inlineHelpText>
    <label>Handcontrol (LikoGuard Only)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>STD</fullName>
            </value>
            <value>
                <fullName>GUI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>