force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Head_Support_Needed__c.field-meta.xml
<CustomField>
    <fullName>Head_Support_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Head Support Needed?</label>
    <type>Checkbox</type>
</CustomField>