force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Hill_Rom_Notes__c.field-meta.xml
<CustomField>
    <fullName>Hill_Rom_Notes__c</fullName>
    <label>Hill-Rom Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>