force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/IDN__c.field-meta.xml
<CustomField>
    <fullName>IDN__c</fullName>
    <formula>Opportunity__r.Account.IDN_1_Desc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IDN</label>
    <type>Text</type>
</CustomField>