force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/In_Review_Special_Quote__c.field-meta.xml
<CustomField>
    <fullName>In_Review_Special_Quote__c</fullName>
    <label>3 In Review - Special</label>
    <type>Date</type>
</CustomField>