force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Include_drawings__c.field-meta.xml
<CustomField>
    <fullName>Include_drawings__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if drawings are required with the proposal.</description>
    <inlineHelpText>Indicates if drawings are required with the proposal.</inlineHelpText>
    <label>Include drawings</label>
    <type>Checkbox</type>
</CustomField>