force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Include_Installation__c.field-meta.xml
<CustomField>
    <fullName>Include_Installation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the price of installation should be included.</description>
    <inlineHelpText>Indicates if the price of installation should be included (select likely installation subcontractor).</inlineHelpText>
    <label>Include Installation</label>
    <type>Checkbox</type>
</CustomField>