force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Include_Parking_Panel__c.field-meta.xml
<CustomField>
    <fullName>Include_Parking_Panel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Parking Panel</label>
    <type>Checkbox</type>
</CustomField>