force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Include_Parts_List__c.field-meta.xml
<CustomField>
    <fullName>Include_Parts_List__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Parts list indicating whether a list of the Liko parts are required</description>
    <label>Include Parts List</label>
    <type>Checkbox</type>
</CustomField>