force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Initial_Customer_Request__c.field-meta.xml
<CustomField>
    <fullName>Initial_Customer_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Customer Request</label>
    <type>Checkbox</type>
</CustomField>