force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Initial_Customer_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Customer_Request_Date__c</fullName>
    <label>Initial Customer Request Date</label>
    <type>Date</type>
</CustomField>