force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Installation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Installation_Amount__c</fullName>
    <label>Installation Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>