force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Installation_Complete__c.field-meta.xml
<CustomField>
    <fullName>Installation_Complete__c</fullName>
    <label>6 Installation Complete Dt</label>
    <type>Date</type>
</CustomField>