force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Installation_Sub__c.field-meta.xml
<CustomField>
    <fullName>Installation_Sub__c</fullName>
    <label>Installation Sub</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Installed By HRC</fullName>
            </value>
            <value>
                <fullName>HRC - Installer TBD (Non-Union Labor)</fullName>
                <default>true</default>
                <label>HRC - Installer TBD (Non-Union Labor)</label>
            </value>
            <value>
                <fullName>HRC - Installer TBD (Union Labor)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>