force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/JDE_Adjustment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>JDE_Adjustment_Schedule__c</fullName>
    <label>JDE Adjustment Schedule</label>
    <length>50</length>
    <type>Text</type>
</CustomField>