force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/JDE_Number__c.field-meta.xml
<CustomField>
    <fullName>JDE_Number__c</fullName>
    <formula>Opportunity__r.JDE_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JDE Number</label>
    <type>Text</type>
</CustomField>