force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/JDE_Order__c.field-meta.xml
<CustomField>
    <fullName>JDE_Order__c</fullName>
    <formula>Opportunity__r.Order_Number__c</formula>
    <label>JDE Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>