force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Joists_are_made_of__c.field-meta.xml
<CustomField>
    <fullName>Joists_are_made_of__c</fullName>
    <label>Joists (are made of)?</label>
    <type>TextArea</type>
</CustomField>