force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Joists_Notes__c.field-meta.xml
<CustomField>
    <fullName>Joists_Notes__c</fullName>
    <label>Joists Notes</label>
    <type>TextArea</type>
</CustomField>