force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Lag_Screws_w_Clg_Joist_PERPEND_to_Rail__c.field-meta.xml
<CustomField>
    <fullName>Lag_Screws_w_Clg_Joist_PERPEND_to_Rail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lag Screws w/Clg Joist PERPEND to Rail</label>
    <type>Checkbox</type>
</CustomField>