force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Liko_Site_Survey_Form__c.field-meta.xml
<CustomField>
    <fullName>Liko_Site_Survey_Form__c</fullName>
    <formula>HYPERLINK(&apos;https://hill-rom--hrctest.my.salesforce.com/sfc/p/E0000000KMt9/a/0L000000CrAk/RYTE0y1_GUArHXVtCIJWsXvewnqlaw8xJzgzATz9nIw&apos; , &quot;Click Here&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Liko Site Survey Form</label>
    <type>Text</type>
</CustomField>