force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Lowered_Bathroom_Wall__c.field-meta.xml
<CustomField>
    <fullName>Lowered_Bathroom_Wall__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if this facility has lowered bathroom walls.</description>
    <inlineHelpText>Check if this facility has lowered bathroom walls.</inlineHelpText>
    <label>Lowered Bathroom Wall</label>
    <type>Checkbox</type>
</CustomField>