force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Manufacturing_Note__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Note__c</fullName>
    <label>Manufacturing Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>