force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Motor__c.field-meta.xml
<CustomField>
    <fullName>Motor__c</fullName>
    <inlineHelpText>Select the Required lifting capacity.</inlineHelpText>
    <label>Lift Capacity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Likorall (440lbs)</fullName>
                <label>440 lbs</label>
            </value>
            <value>
                <fullName>LIkorall (507lbs)</fullName>
                <label>507 lbs</label>
            </value>
            <value>
                <fullName>Likorall (550lbs)</fullName>
                <label>550 lbs</label>
            </value>
            <value>
                <fullName>LikoGuard L (600 lbs)</fullName>
                <label>600 lbs</label>
            </value>
            <value>
                <fullName>LikoGuard XL (800 lbs)</fullName>
                <label>800 lbs</label>
            </value>
            <value>
                <fullName>880 lbs</fullName>
            </value>
            <value>
                <fullName>1014 lbs</fullName>
            </value>
            <value>
                <fullName>1100 lbs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>