force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Moving_Through_Agile__c.field-meta.xml
<CustomField>
    <fullName>Moving_Through_Agile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>8. Moving Through Agile (PE)</label>
    <type>Checkbox</type>
</CustomField>