force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Moving_Through_Agile_Date__c.field-meta.xml
<CustomField>
    <fullName>Moving_Through_Agile_Date__c</fullName>
    <label>8 Rlsd to Agile Dt</label>
    <type>Date</type>
</CustomField>