force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Moving_Through_Agile_User__c.field-meta.xml
<CustomField>
    <fullName>Moving_Through_Agile_User__c</fullName>
    <label>8. Moving Through Agile User</label>
    <length>80</length>
    <type>Text</type>
</CustomField>