force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Need_Add_Info_From_AS__c.field-meta.xml
<CustomField>
    <fullName>Need_Add_Info_From_AS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>4. Need Add. Info From AS</label>
    <type>Checkbox</type>
</CustomField>