force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Need_Add_Info_From_AS_Date__c.field-meta.xml
<CustomField>
    <fullName>Need_Add_Info_From_AS_Date__c</fullName>
    <label>4 Need Adtl Info From SE Dt</label>
    <type>Date</type>
</CustomField>