force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Need_Add_Info_From_AS_User__c.field-meta.xml
<CustomField>
    <fullName>Need_Add_Info_From_AS_User__c</fullName>
    <label>4. Need Add. Info From AS User</label>
    <length>80</length>
    <type>Text</type>
</CustomField>