force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Need_Adtl_Info_Quote__c.field-meta.xml
<CustomField>
    <fullName>Need_Adtl_Info_Quote__c</fullName>
    <label>4 Need Adtl Info</label>
    <type>Date</type>
</CustomField>